@@ -1,3 +1,4 @@
+* Add batch option to push queue tasks
 * Support ref value for reference field
 * Enforce ref model in XML data
 * Do not resolve entities by default with lxml (issue11219)
